<package>
  <name>ackermann_qt</name>
  <description>
     Qt tele-operation interface for driving a vehicle with Ackermann
     steering under human control.
  </description>
  <maintainer email="hendrix@stanford.edu">Austin Hendrix</maintainer>
  <author email="hendrix@stanford.edu">Austin Hendrix</author>
  <author>Jack O'Quin</author>
  <license>BSD</license>
  <url>http://www.ros.org/wiki/ackermann_qt</url>
  <version>0.2.0</version>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ackermann_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <run_depend>ackermann_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>python_qt_binding</run_depend>
  <run_depend>rospy</run_depend>

</package>
